Fading Suns 2nd Edition Revised/Fading_Suns_2nd_Edition_Revised.css
/* ... */
.sheet-fs-bodymodifications .sheet-fs-table input:nth-child(1) {
    font-weight: bold;
}

.sheet-fs-carried .sheet-fs-table { grid-template-columns: 100%; }

.sheet-fs-owned .sheet-fs-table { grid-template-columns: 2fr 1fr ; }

.sheet-fs-spentxp .sheet-fs-table { grid-template-columns: 2fr 60px 60px 60px 3fr; }
.sheet-fs-spentxp .sheet-fs-table input:nth-child(n+2):nth-child(-n+4) {
    text-align: center;
}

.sheet-fs-table-head {
    background-color: #4a6486;
    color: white;
    font-weight: bold;
    white-space: nowrap;
    padding-left: 1px;
    padding-right: 1px;
}
.sheet-fs-table-cell {
    grid-column: auto / span 1;
}

.sheet-fs-table .itemcontrol {
    height: auto !important; /* TODO try without this to see if something bad happens */
}

.sheet-fs-shield-props {
    justify-content: center;
    align-items: center;
}

.sheet-fs-shield-impact {
    margin-left: 10px;
}

.sheet-fs-shield-force {
    margin-right: 10px;
}

.sheet-fs-autoexpand input[type="number"] {
    width: 100%;
}

button[type="roll"].sheet-fs-hidden {
    display: none;
}

div.sheet-fs-dots {
    display: flex;
    flex-direction: row;
    margin-left: 3px;
}

div.sheet-fs-dots .sheet-fs-dot:nth-child(5n+2) {
    margin-left: 5px;
}

button.sheet-fs-dot {
    padding: 0;
    border: solid 1px #a8a8a8;
    cursor: pointer;
    width: 12px;
    height: 12px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 2px;
}

button.sheet-fs-dot:hover,
button.sheet-fs-dot > span:hover {
    filter: sepia(100%) saturate(100%);
}
button[type=roll] {
    background: #fff;
}
button[type=roll]:hover:before {
    color: #888800;
}
  
button.sheet-fs-dot > span {
    width: 8px;
    height: 8px;
    background: buttontext;
    background-color: #4a6486;
}
  
/* Hide the "checked" section of the radio if the hidden attribute value is greater than the button value */
input.sheet-fs-dot[value="0"] ~ button.sheet-fs-gt-0 > span.sheet-fs-checked,
input.sheet-fs-dot[value="1"] ~ button.sheet-fs-gt-1 > span.sheet-fs-checked,
input.sheet-fs-dot[value="2"] ~ button.sheet-fs-gt-2 > span.sheet-fs-checked,
input.sheet-fs-dot[value="3"] ~ button.sheet-fs-gt-3 > span.sheet-fs-checked,
input.sheet-fs-dot[value="4"] ~ button.sheet-fs-gt-4 > span.sheet-fs-checked,
input.sheet-fs-dot[value="5"] ~ button.sheet-fs-gt-5 > span.sheet-fs-checked,
input.sheet-fs-dot[value="6"] ~ button.sheet-fs-gt-6 > span.sheet-fs-checked,
input.sheet-fs-dot[value="7"] ~ button.sheet-fs-gt-7 > span.sheet-fs-checked,
input.sheet-fs-dot[value="8"] ~ button.sheet-fs-gt-8 > span.sheet-fs-checked,
input.sheet-fs-dot[value="9"] ~ button.sheet-fs-gt-9 > span.sheet-fs-checked,
input.sheet-fs-dot[value="10"] ~ button.sheet-fs-gt-10 > span.sheet-fs-checked,
input.sheet-fs-dot[value="11"] ~ button.sheet-fs-gt-11 > span.sheet-fs-checked,
input.sheet-fs-dot[value="12"] ~ button.sheet-fs-gt-12 > span.sheet-fs-checked,
input.sheet-fs-dot[value="13"] ~ button.sheet-fs-gt-13 > span.sheet-fs-checked,
input.sheet-fs-dot[value="14"] ~ button.sheet-fs-gt-14 > span.sheet-fs-checked,
input.sheet-fs-dot[value="15"] ~ button.sheet-fs-gt-15 > span.sheet-fs-checked,
input.sheet-fs-dot[value="16"] ~ button.sheet-fs-gt-16 > span.sheet-fs-checked,
input.sheet-fs-dot[value="17"] ~ button.sheet-fs-gt-17 > span.sheet-fs-checked,
input.sheet-fs-dot[value="18"] ~ button.sheet-fs-gt-18 > span.sheet-fs-checked,
input.sheet-fs-dot[value="19"] ~ button.sheet-fs-gt-19 > span.sheet-fs-checked,
input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
    display: none;
}

.sheet-fs-skill > div.sheet-fs-skill-normal {
    width:100%;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: flex-start;
    align-items: center;
    justify-content: flex-start;
    align-self: stretch;
    overflow: hidden;
    text-overflow: ellipsis;
}
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice {
    display: none;
}
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice,
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover {
    position: absolute;
    z-index: 5;
    background-color: #ffffff;
    border-radius: 5px;
    border: 1px solid rgb(15, 9, 9);
    padding: 2px;
    margin-left: 26px;
    margin-top: 118px; /* prev 41px; */
    width: max-content;
    /*background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Fading%20Suns%20v2.75/images/background1.jpg) top left repeat;
    background-attachment: fixed;*/

    display: grid;
    grid-auto-flow: row;
    grid-template-rows: max-content;
}
/*
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > label,
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > label,
*/
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > input,
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > input {
    height: 25px;
}
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div,
.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div {
    display: grid;
    grid-auto-flow: column;
    grid-template-rows: repeat(9, max-content);
}
/* ... */

